feat(rbac): product-scoped dashboard metrics for lead_agent (scope-aware cache keys)